--- a/.github/workflows/hosted-execution.yml
+++ b/.github/workflows/hosted-execution.yml
@@ -45,6 +45,9 @@ jobs:
       matrix:
         entrypoint: [
           "pipenv run best-practice-desktop-us",
+          "pipenv run best-practice-mobile-web-us",
+          "pipenv run best-practice-mobile-native-us-android",
+          "pipenv run best-practice-mobile-native-us-ios",
         ]
     steps:
     - uses: actions/checkout@v2
